--- a/boeken.html
+++ b/boeken.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/e8bbed1e5b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -31,7 +35,6 @@
         <span class="cart__amount">0</span>
       </div>
     </label>
-
     <h1>Kies uit de volgende boeken :</h1>
     <div class="controls">
       <label class="control__cb-label">
